# Udemy_CMake

./: README.md
m1l1_Building_a_C++_Project_using_G++/v1/: calculator  main.cpp
m1l1_Building_a_C++_Project_using_G++/v2/: calculator  main.cpp
m2l2_Build_Files_Generation_Process/: CMakeLists.txt
m4l1_Normal_Variables/: CMakeLists.txt
m5l1_If_Else_Command/: CMakeLists.txt
m5l7_Listfiles_and_Modules/: CMakeLists.txt
m7l2_Installation_Process_of_Packages/: CMakeLists.txt
m7l2_Installation_Process_of_Packages/my_math/: CMakeLists.txt
